--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,2 +1,79 @@
-.env
 dev-data/
+
+# Node modules
+node_modules/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Runtime
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Environment variables
+.env
+.env.*.local
+
+# Build output
+dist/
+build/
+tmp/
+temp/
+.cache/
+.nyc_output/
+
+# Dependency directories
+jspm_packages/
+
+# IDEs and editors
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+# Coverage reports
+coverage/
+
+# Optional npm cache directory
+.npm/
+
+# Optional eslint cache
+.eslintcache
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Parcel cache
+.cache/
+
+# Next.js build output
+.next/
+
+# Nuxt.js build output
+.nuxt/
+
+# Remix build output
+.build/
+
+# SvelteKit build output
+.svelte-kit/
+
+# VS Code launch configurations
+.vscode/launch.json
+
+# Optional: Docker files
+docker-compose.override.yml
+
+# Local env files
+.local/
